syntax = "proto3";

package common;

option go_package = "server/pb/common;common";

//公共请求头
message CommonHeader {
  //trace_id
  string trace_id = 1;
  uint64 operator_id = 2;
  uint32 operator_type = 3;
}

//公共响应状态
message BusinessStatus {
  //响应状态码
  int32 code = 1;
  //响应消息
  string msg = 2;
  //trace_id
  string trace_id = 3;
}
